# advent-of-code

./: .dockerignore  .envrc  .githooks.ini  .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: actions.yml
docs/: generate_readme.py  index.md  output_table.md  year.md
src/: aocpuzzle.py  load_year.py  run.py  settings.default.json
src/docs/: generate_readme.py  output_table.md
src/puzzles/: __init__.py
src/puzzles/01/: output  solution.py
src/puzzles/02/: output  solution.py
src/puzzles/03/: output  solution.py
src/puzzles/04/: README.md  output
src/puzzles/05/: README.md  output  solution.py
src/puzzles/06/: output  solution.py
src/puzzles/07/: output  solution.py
src/puzzles/08/: output
src/puzzles/09/: README.md  output
src/puzzles/10/: output  solution.py
src/puzzles/11/: output
src/puzzles/12/: output
src/puzzles/13/: output  solution.py
src/puzzles/14/: output
src/puzzles/15/: output  solution.py
src/puzzles/16/: output  solution.py
src/puzzles/17/: output
src/puzzles/18/: output
src/puzzles/19/: output  solution.py
src/puzzles/20/: output  solution.py
src/puzzles/21/: output  solution.py
src/puzzles/23/: output
src/puzzles/25/: README.md  output
src/years/2020/: README.md  __init__.py
src/years/2020/01/: README.md  output  solution.py
src/years/2020/02/: README.md  output  solution.py
src/years/2020/03/: README.md  output  solution.py
src/years/2021/: README.md
src/years/2022/: README.md
src/years/utils/: common.py  geo.py
(+212 files in other folders)
